--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,237 @@
+@charset "UTF-8";
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: "Microsoft YaHei UI";
+  font-size: 16px;
+  vertical-align: bottom; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1;
+  background: #eee; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+input {
+  outline: none; }
+
+button {
+  font-family: "Microsoft YaHei UI";
+  outline: none; }
+
+.wrapper {
+  width: 1200px;
+  margin: auto;
+  background: #fff;
+  box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.8); }
+
+a {
+  text-decoration: none;
+  color: #008582; }
+  a:hover, a.active {
+    color: #ea703a; }
+
+header {
+  width: 1100px;
+  height: 107px;
+  padding: 27px 70px 0 30px; }
+  header .header-top {
+    width: 100%;
+    overflow: hidden;
+    position: relative; }
+    header .header-top .header-top-left {
+      float: left; }
+      header .header-top .header-top-left ul {
+        overflow: hidden; }
+        header .header-top .header-top-left ul li {
+          float: left;
+          border-right: 1px solid #008582; }
+          header .header-top .header-top-left ul li a {
+            padding-left: 12px;
+            padding-right: 12px; }
+          header .header-top .header-top-left ul li:first-child a {
+            padding-left: 0; }
+          header .header-top .header-top-left ul li:last-child {
+            border: none; }
+    header .header-top .header-top-right {
+      float: right;
+      position: relative;
+      width: 317px;
+      height: 36px;
+      margin-right: 112px; }
+      header .header-top .header-top-right #search {
+        width: 305px;
+        height: 24px;
+        border-radius: 6px;
+        border: 1px solid #008582;
+        padding: 5px; }
+      header .header-top .header-top-right ul {
+        position: absolute;
+        overflow: hidden;
+        right: 11px;
+        top: 8px; }
+        header .header-top .header-top-right ul li {
+          float: left;
+          width: 21px;
+          height: 21px; }
+          header .header-top .header-top-right ul li:first-child {
+            padding-right: 10px;
+            border-right: 1px solid #008582;
+            background: url("../img/xj.png") no-repeat; }
+          header .header-top .header-top-right ul li:last-child {
+            margin-left: 10px;
+            background: url("../img/fdj.png") no-repeat; }
+    header .header-top button {
+      position: absolute;
+      right: 0px;
+      top: 2px;
+      font-size: 12px;
+      background: #008582;
+      color: #fff;
+      outline: none;
+      border: none;
+      width: 93px;
+      height: 32px; }
+      header .header-top button:hover {
+        background: #ea703a; }
+  header .header-bottom {
+    margin-top: 23px; }
+    header .header-bottom a {
+      float: left; }
+    header .header-bottom nav {
+      float: right;
+      padding-top: 13px; }
+      header .header-bottom nav ul li {
+        float: left;
+        padding: 0 20px; }
+        header .header-bottom nav ul li a.mainactive {
+          color: #008582;
+          padding-bottom: 10px;
+          border-bottom: 2px solid #ea703a; }
+
+footer {
+  width: 100%;
+  height: 212px;
+  background: #fff;
+  border-top: 2px solid #008582; }
+  footer p {
+    margin: auto;
+    font-size: 14px;
+    text-align: center;
+    padding-top: 36px; }
+    footer p span {
+      line-height: 25px; }
+  footer ul {
+    overflow: hidden;
+    margin: auto;
+    width: 786px;
+    margin-top: 20px; }
+    footer ul li {
+      float: left;
+      border-right: 1px solid #000; }
+      footer ul li:last-child {
+        border: none; }
+      footer ul li a {
+        color: #000;
+        font-size: 12px;
+        padding: 0 20px; }
+
+/*面包屑*/
+.breadcrumb {
+  font-size: 18px;
+  color: #008582;
+  padding: 20px 83px 0px 83px; }
+  .breadcrumb u {
+    text-decoration: none;
+    line-height: 30px; }
+  .breadcrumb a {
+    line-height: 30px; }
+  .breadcrumb span {
+    line-height: 30px; }
+  .breadcrumb .tab-items {
+    float: right; }
+    .breadcrumb .tab-items button {
+      border: none;
+      color: #666;
+      background: #f2f2f2;
+      padding: 5px 20px;
+      font-size: 14px;
+      font-weight: bold;
+      border-bottom: 2px solid #fff; }
+      .breadcrumb .tab-items button:hover {
+        color: #fff;
+        background: #666;
+        border-bottom: 2px solid #ea703a; }
+      .breadcrumb .tab-items button.active {
+        color: #fff;
+        background: #666;
+        border-bottom: 2px solid #ea703a; }
+
+.PagePlugs {
+  text-align: center; }
+
+/* 设置滚动条的样式 */
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px; }
+
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 2px; }
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background: rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 6px #008582; }
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #008582; }
+
 .wrapper {
   padding-bottom: 14px; }
 
 .slider {
   height: 455px; }
+
+.swiper-slide {
+  text-align: center; }
 
 .section-title {
   color: #008582;
@@ -20,7 +249,7 @@
   .section-title > p {
     float: right;
     font-size: 12px;
-    margin-right: 76px;
+    margin-right: 27px;
     line-height: 40px; }
 
 .section {
@@ -29,7 +258,7 @@
   .section .section-layout-left {
     float: left; }
     .section .section-layout-left .section-content1 {
-      width: 678px; }
+      width: 613px; }
       .section .section-layout-left .section-content1 ul li {
         overflow: hidden;
         margin-bottom: 14px; }
@@ -45,7 +274,7 @@
               .section .section-layout-left .section-content1 ul li div strong a:hover {
                 text-decoration: underline; }
           .section .section-layout-left .section-content1 ul li div p {
-            margin-top: 10px;
+            margin-top: 15px;
             font-style: italic;
             color: #008582; }
             .section .section-layout-left .section-content1 ul li div p small {
@@ -56,18 +285,33 @@
             font-size: 12px;
             color: rgba(0, 0, 0, 0.6);
             line-height: 1.52; }
+          .section .section-layout-left .section-content1 ul li div h5 {
+            width: 200px;
+            margin-top: 10px;
+            font-weight: normal;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 3;
+            overflow: hidden;
+            font-size: 12px;
+            color: rgba(0, 0, 0, 0.6);
+            line-height: 1.52; }
   .section .section-layout-right {
-    float: left;
+    float: right;
+    width: 468px;
     position: relative; }
     .section .section-layout-right > img {
       position: absolute;
       left: -5px;
       top: 69px; }
     .section .section-layout-right .section-content2 ul {
-      padding-left: 20px; }
+      padding-left: 20px;
+      display: flex;
+      flex-flow: row;
+      flex-wrap: wrap; }
       .section .section-layout-right .section-content2 ul li {
-        margin-bottom: 12px;
-        overflow: hidden; }
+        overflow: hidden;
+        margin: 0 40px 38px 0; }
         .section .section-layout-right .section-content2 ul li div {
           float: left; }
           .section .section-layout-right .section-content2 ul li div h3 {
@@ -119,13 +363,18 @@
   height: auto; }
 
 .swiper-button-prev {
-  width: 24px;
-  height: 39px;
-  background: url("../img/prev.png") no-repeat; }
+  width: 40px;
+  height: 40px;
+  margin-left: 30px;
+  background: url("../img/slider.png") no-repeat; }
+  .swiper-button-prev:hover {
+    background-position: 0px -42px; }
 
 .swiper-button-next {
-  width: 24px;
-  height: 39px;
-  background: url("../img/next.png") no-repeat; }
+  width: 40px;
+  height: 40px;
+  background: url("../img/slider.png") -42px 0 no-repeat; }
+  .swiper-button-next:hover {
+    background-position: -42px -42px; }
 
 /*# sourceMappingURL=index.css.map */
