--- a/template/index_v_1.0.html
+++ b/template/index_v_1.0.html
@@ -69,11 +69,11 @@
         <img src="img/line.png" alt="">
         <div class="section-content2">
             <ul>
-                <li>
+                <li style="margin:0;margin-bottom:20px;">
                     <div>
-                        <a href=""><img src="img/pic2.png" alt=""></a>
+                        <a href=""><img src="img/pic2.png" width="192" height="128" alt=""></a>
                     </div>
-                    <div style="width:220px;padding-left:19px;">
+                    <div style="width:200px;padding-left:19px;display: flex;flex-direction: column">
                         <h3><a href="">玉猪龙</a></h3>
                         <p>
                             我国古代对发现于红山等地的一种玉器的称呼，又名玉兽玦。
@@ -81,21 +81,9 @@
                         <button>编辑词条</button>
                     </div>
                 </li>
-                <li>
+                <li style="margin:0">
                     <div>
-                        <a href=""><img src="img/pic2.png" alt=""></a>
-                    </div>
-                    <div style="width:220px;padding-left:19px;">
-                        <h3><a href="">玉猪龙</a></h3>
-                        <p>
-                            我国古代对发现于红山等地的一种玉器的称呼，又名玉兽玦。
-                        </p>
-                        <button>编辑词条</button>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href=""><img src="img/pic2.png" alt=""></a>
+                        <a href=""><img src="img/pic2.png" width="192" height="128" alt=""></a>
                     </div>
                     <div style="width:220px;padding-left:19px;">
                         <h3><a href="">玉猪龙</a></h3>
@@ -124,56 +112,54 @@
             <ul>
                 <li>
                     <div>
-                        <a href=""><img src="img/pic3.png" alt=""></a>
+                        <a href=""><img src="img/pic3.png" width="297" height="167" alt=""></a>
                     </div>
-                    <div style="padding-left:34px;width:340px;margin-top:15px;">
+                    <div style="padding-left:34px;width:259px;margin-top:15px;">
                         <strong style="font-size: 16px;font-style:italic;font-weight: normal"><a href="">山东省博物馆虚拟展厅</a></strong>
-                        <p style="color:rgba(0,0,0,.78);font-size:12px;font-style: normal;font-weight: normal">
+                        <p style="color:#008582;font-size:12px;font-style: normal;font-weight: normal">
                             山东省博物馆</p>
+                        <h5>汉代画像石是汉代地下墓室、墓地祠堂、地下墓室室、和庙阙等建筑上雕刻画画像的建汉代画像石是汉代地下墓室、墓地祠堂、地下墓室室、和庙阙等建筑上雕刻画画像的建汉代画像石是汉代地下墓室、墓地祠堂、地下墓室室、和庙阙等建筑上雕刻画画像的建汉代画像石是汉代地下墓室、墓地祠堂、地下墓室室、和庙阙等建筑上雕刻画画像的建</h5>
                         <button class="virtual-enter">点击进入</button>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <a href=""><img src="img/pic3.png" alt=""></a>
+                        <a href=""><img src="img/pic3.png" width="297" height="167" alt=""></a>
                     </div>
-                    <div style="padding-left:34px;width:340px;margin-top:15px;">
+                    <div style="padding-left:34px;width:259px;margin-top:15px;">
                         <strong style="font-size: 16px;font-style:italic;font-weight: normal"><a href="">山东省博物馆虚拟展厅</a></strong>
-                        <p style="color:rgba(0,0,0,.78);font-size:12px;font-style: normal;font-weight: normal">
+                        <p style="color:#008582;font-size:12px;font-style: normal;font-weight: normal">
                             山东省博物馆</p>
-                        <button class="virtual-enter">点击进入</button>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href=""><img src="img/pic3.png" alt=""></a>
-                    </div>
-                    <div style="padding-left:34px;width:340px;margin-top:15px;">
-                        <strong style="font-size: 16px;font-style:italic;font-weight: normal"><a href="">山东省博物馆虚拟展厅</a></strong>
-                        <p style="color:rgba(0,0,0,.78);font-size:12px;font-style: normal;font-weight: normal">
-                            山东省博物馆</p>
+                        <h5>汉代画像石是汉代地下墓室、墓地祠堂、地下墓室室、和庙阙等建筑上雕刻画画像的建...</h5>
                         <button class="virtual-enter">点击进入</button>
                     </div>
                 </li>
             </ul>
         </div>
     </div>
-    <div class="section-layout-right">
-        <div class="section-title" style="width:409px;">
+    <div class="section-layout-right" style="width:435px;">
+        <div class="section-title" style="width:409px;margin-bottom:55px;">
             <h3>我要册展 <p>Virtual Exhibition</p></h3>
             <p style="margin:0"><a ui-sref="ablum">更多>></a></p>
         </div>
-        <img src="img/line.png" alt="" style="left:-110px">
+        <img src="img/line.png" alt="" style="left:-70px">
         <div class="section-content2">
             <ul>
                 <li>
                     <div>
-                        <a href=""><img src="img/pic4.png" alt=""></a>
+                        <a href=""><img src="img/pic4.png" width="162" height="110" alt=""></a>
                     </div>
-                </li>
-                <li>
+                </li><li>
                     <div>
-                        <a href=""><img src="img/pic4.png" alt=""></a>
+                        <a href=""><img src="img/pic4.png" width="162" height="110" alt=""></a>
+                    </div>
+                </li><li>
+                    <div>
+                        <a href=""><img src="img/pic4.png" width="162" height="110" alt=""></a>
+                    </div>
+                </li><li>
+                    <div>
+                        <a href=""><img src="img/pic4.png" width="162" height="110" alt=""></a>
                     </div>
                 </li>
             </ul>
@@ -191,7 +177,7 @@
         <ul class="swiper-wrapper">
             <li class="swiper-slide" ng-repeat="i in slidess">
                 <a href="">
-                    <img ng-src="{{i.ur}}" alt="">
+                    <img ng-src="{{i.ur}}" width="192" height="128" alt="">
                 </a>
             </li>
             <!--<li class="swiper-slide">-->
@@ -221,9 +207,7 @@
             <!--</li>-->
         </ul>
     </div>
-    <div class="swiper-button-prev"
-         style="width:24px;height:39px;background:url('img/prev.png') no-repeat;margin-left:30px;"></div>
-    <div class="swiper-button-next"
-         style="width:24px;height:39px;background:url('img/next.png') no-repeat;margin-right:40px;"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
 </div>
 
