--- a/template/museumDetails.html
+++ b/template/museumDetails.html
@@ -3,7 +3,7 @@
 </p>
 <div class="museum-details">
     <div class="museum-details-img">
-        <img src="img/digization.png" alt="">
+        <img src="img/digization.png" width="640" height="360" alt="">
     </div>
     <div class="museum-details-msg">
         <p class="museum-details-msg-title">山东省博物馆</p>
@@ -86,37 +86,32 @@
         <ul>
             <li>
                 <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" alt="">
+                    <img src="img/collection1.png" width="192" height="128" alt="">
                     <p>清康熙御笔青花瓷</p>
                 </a>
-            </li>
-            <li>
+            </li><li>
                 <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" alt="">
+                    <img src="img/collection1.png" width="192" height="128" alt="">
                     <p>清康熙御笔青花瓷</p>
                 </a>
-            </li>
-            <li>
+            </li><li>
                 <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" alt="">
+                    <img src="img/collection1.png" width="192" height="128" alt="">
                     <p>清康熙御笔青花瓷</p>
                 </a>
-            </li>
-            <li>
+            </li><li>
                 <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" alt="">
+                    <img src="img/collection1.png" width="192" height="128" alt="">
                     <p>清康熙御笔青花瓷</p>
                 </a>
-            </li>
-            <li>
+            </li><li>
                 <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" alt="">
+                    <img src="img/collection1.png" width="192" height="128" alt="">
                     <p>清康熙御笔青花瓷</p>
                 </a>
-            </li>
-            <li>
+            </li><li>
                 <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" alt="">
+                    <img src="img/collection1.png" width="192" height="128" alt="">
                     <p>清康熙御笔青花瓷</p>
                 </a>
             </li>
@@ -138,7 +133,7 @@
             展览 <a ui-sref="display({museum:'济南市博物馆',id:'2'})">更多 &Gt;</a>
         </p>
         <div class="museum-details-display-content">
-            <a href=""><img src="img/展览-博物馆_03.png" alt=""></a>
+            <a href=""><img src="img/展览-博物馆_03.png" width="297" height="167px" alt=""></a>
             <div>
                 <h6><a href="">山东文化展</a></h6>
                 <h5>展期：<span>2016.12.01-2017.02-01</span></h5>
@@ -155,7 +150,7 @@
             虚拟展厅
         </p>
         <div class="museum-details-digization-content">
-            <img src="img/3d.png" alt="">
+            <img src="img/3d.png" width="297" height="167px" alt="">
             <div>
                 <h6>
                     汉代画像艺术展
