--- a/css/album.css
+++ b/css/album.css
@@ -202,95 +202,13 @@ footer {
         background: #666;
         border-bottom: 2px solid #ea703a; }
 
-.com_form {
-  width: 100%;
-  position: relative; }
-
-.input {
-  width: 99%;
-  height: 60px;
-  border: 1px solid #ccc; }
-
-.com_form p {
-  height: 28px;
-  line-height: 28px;
-  position: relative;
-  margin-top: 10px; }
-
-span.emotion {
-  width: 42px;
-  height: 20px;
-  padding-left: 20px;
-  cursor: pointer; }
-
-span.emotion:hover {
-  background-position: 2px -28px; }
-
-.qqFace {
-  margin-top: 4px;
-  background: #fff;
-  padding: 2px;
-  border: 1px #dfe6f6 solid; }
-
-.qqFace table td {
-  padding: 0px; }
-
-.qqFace table td img {
-  cursor: pointer;
-  border: 1px #fff solid; }
-
-.qqFace table td img:hover {
-  border: 1px #0066cc solid; }
-
-#show {
-  width: 770px;
-  margin: 20px auto;
-  background: #fff;
-  padding: 5px;
-  border: 1px solid #DDD;
-  vertical-align: top; }
-
-.sub_btn {
-  position: absolute;
-  right: 0px;
-  top: 0;
-  display: inline-block;
-  zoom: 1;
-  /* zoom and *display = ie7 hack for display:inline-block */
-  *display: inline;
-  vertical-align: baseline;
-  margin: 0 2px;
-  outline: none;
-  cursor: pointer;
-  text-align: center;
-  font: 14px/100% Arial, Helvetica, sans-serif;
-  padding: .5em 2em .55em;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.6);
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-  color: #e8f0de;
-  border: solid 1px #538312;
-  background: #64991e;
-  background: -webkit-gradient(linear, left top, left bottom, from(#7db72f), to(#4e7d0e));
-  background: -moz-linear-gradient(top, #7db72f, #4e7d0e);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7db72f', endColorstr='#4e7d0e'); }
-
-.sub_btn:hover {
-  background: #538018;
-  background: -webkit-gradient(linear, left top, left bottom, from(#6b9d28), to(#436b0c));
-  background: -moz-linear-gradient(top, #6b9d28, #436b0c);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b9d28', endColorstr='#436b0c'); }
-
 .PagePlugs {
   text-align: center; }
 
 /* 设置滚动条的样式 */
 ::-webkit-scrollbar {
-  width: 2px; }
+  width: 2px;
+  height: 2px; }
 
 /* 滚动槽 */
 ::-webkit-scrollbar-track {
@@ -412,14 +330,14 @@ span.emotion:hover {
       padding: 0;
       margin: 0;
       border-radius: 0 0 14px 14px;
-      background: #008582;
+      background: #bababa;
       outline: none;
       border: none;
       font-size: 16px;
       color: #fff;
       cursor: pointer; }
       .ablum .ablum-how button:hover {
-        background: #ea703a; }
+        background: #008582; }
 
 .ablum-details .ablum-details-wrapper {
   padding: 0 83px;
@@ -479,5 +397,85 @@ span.emotion:hover {
       background: url("../img/emoji.png") no-repeat; }
       .ablum-details .ablum-details-wrapper .ablum-details-emoji .ablum-details-emoji-state.active {
         background-position: -22px 0; }
+
+.com_form {
+  width: 100%;
+  position: relative; }
+
+.input {
+  width: 99%;
+  height: 60px;
+  border: 1px solid #ccc; }
+
+.com_form p {
+  height: 28px;
+  line-height: 28px;
+  position: relative;
+  margin-top: 10px; }
+
+span.emotion {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-left: 20px;
+  cursor: pointer;
+  background: url("../img/emoji.png") no-repeat; }
+
+span.emotion.active {
+  background-position: -22px 0; }
+
+.qqFace {
+  margin-top: 4px;
+  background: #fff;
+  padding: 2px;
+  border: 1px #dfe6f6 solid; }
+
+.qqFace table td {
+  padding: 0px; }
+
+.qqFace table td img {
+  cursor: pointer;
+  border: 1px #fff solid; }
+
+.qqFace table td img:hover {
+  border: 1px #0066cc solid; }
+
+#show {
+  width: 770px;
+  margin: 20px auto;
+  background: #fff;
+  padding: 5px;
+  border: 1px solid #DDD;
+  vertical-align: top; }
+
+.sub_btn {
+  position: absolute;
+  right: 0px;
+  top: 0;
+  display: inline-block;
+  zoom: 1;
+  /* zoom and *display = ie7 hack for display:inline-block */
+  display: inline;
+  vertical-align: baseline;
+  margin: 0 2px;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  font-size: 14px;
+  padding: .5em 2em .55em;
+  color: #666;
+  border: none;
+  background: #e6e6e6; }
+
+.sub_btn:hover {
+  color: #fff;
+  background: #ea703a; }
+
+.comment-count {
+  position: absolute;
+  right: 8px;
+  bottom: 45px; }
+  .comment-count.warr {
+    color: red; }
 
 /*# sourceMappingURL=album.css.map */
