--- a/css/collection.scss
+++ b/css/collection.scss
@@ -322,29 +322,35 @@
       }
       button {
         outline: none;
-        color: #fff;
-        width: 55px;
-        height: 28px;
-        background: $theme-color;
         border: none;
-        border-radius: 2px;
         margin-left: 10px;
-        &:hover, &.active {
-          background: $theme-color-active;
+        padding:0;
+        a{
+          display: block;
+          color: #fff;
+          width: 55px;
+          height: 28px;
+          background: $theme-color;
+          border-radius: 2px;
+          line-height: 28px;
+          &:hover, &.active {
+            background: $theme-color-active;
+          }
         }
+
       }
     }
 
   }
   .collection-details-img {
-    width: 542px;
-    height: 361px;
+    width: 640px;
+    height: 426px;
     display: inline-block;
   }
   .collection-details-msg {
     display: inline-block;
-    width: 480px;
-    height: 361px;
+    width: 425px;
+    height: 426px;
     > p {
       font-size: 18px;
       color: $theme-color;
@@ -366,8 +372,8 @@
   }
   .collection-details-infor {
     .content_1{
-      width:430px;
-      height:90px;
+      width:375px;
+      height:190px;
       overflow: auto;
       text-indent: 24px;
       font-size: 12px;
@@ -446,4 +452,7 @@
 .btn {
   display: none;
 }
-
+.video-content{
+  width:100%;
+  height:100%;
+}
