--- a/css/unslider-dots.css
+++ b/css/unslider-dots.css
@@ -32,11 +32,11 @@
     border-radius: 5px;
     overflow: hidden;
     text-indent: -999em;
-    border: 2px solid #008582;
+    border: 2px solid #fff;
     cursor: pointer;
 }
 
 .unslider-nav ol li.unslider-active {
-    background: #008582;
+    background: #fff;
     cursor: default;
 }
