--- a/template/digitization.html
+++ b/template/digitization.html
@@ -14,12 +14,13 @@
             <ul>
                 <li class="digization-list-item-img">
                     <a ng-href="{{item.viPCUrl}}">
-                        <img ng-src="{{item.viMasterMap}}" width="449" height="253" alt="{{item.viName}}">
+                        <img ng-src="{{item.viMasterMap}}" width="297" height="167" alt="{{item.viName}}">
                     </a>
                 </li>
                 <li class="digization-list-item-infor">
                     <div>
                         <h1 ng-bind="item.viName"></h1>
+                        <h2>山东省博物馆</h2>
                         <p ng-bind="item.viIntro" class="hide" ng-mouseover="showMore($event)" ng-mouseleave="hide($event)"></p>
                     </div>
                 </li>
